Fix issue where body stretches when a modal is opened

--- a/app/assets/stylesheets/users/new.css.scss
+++ b/app/assets/stylesheets/users/new.css.scss
@@ -12,9 +12,21 @@
   .screen-centered {
     margin-top: 30%;
   }
+
+  .modal {
+    padding-top: 15%;
+  }
 }
 
 .logo {
   color: white;
+  font-weight: bold;
   font-size: 5em;
 }
+
+.white-bg {
+  font-size: $largeFont;
+  background: rgba(255,255,255, 0.70)
+}
+
+body.modal-open { margin: 0; padding: 0; }
